style.css
body {
  text-align: center;
  background-color: #080;
  color: #8f8;
  font-family: "Trebuchet MS";
  box-sizing: border-box;
}

div {
  display: inline-block;
  float: left;
  margin: 2px;
}

div#container {
  float: none;
}

div#rom-controls {
  text-align: left;
  width: 320px;
  margin: 0;
  margin-left: 2px;
}

span#errorDisplay {
  font-size: 12px;
}

h1 {
  font-size: 48px;
  margin: 0;
}

canvas {
  border: 1px solid #000;
  background-color: #000;
  color: #fff;
}

textarea, select, input {
  background-color: #dfd;
  border: 1px inset #dfd;
  border-radius: 2px;
  color: #080;
  box-sizing: border-box;
}

textarea {
  width: 320px;
  max-width: 320px;
  height: 70px;
  min-height: 70px;
  float: left; /* somehow this makes them align */
  font-size: 10px;
}

table {
  border-collapse: collapse;
  font-size: 16px;
  width: 320px;
  margin: 0;
}

td, th {
  border: 1px solid #2f2;
  padding: 0;
  padding-right: 2px;
}

thead tr:last-child th {
  border-bottom-width: 2px;
}

td>span, th>span {
  font-family: "Courier New";
  color: #fff;
}

input[type="button"] {
  border: 1px outset #dfd;
  border-radius: 4px;
}

input[type="button"]:focus {
  outline: 0;
}

input[type="button"]:active {
  border-style: inset;
}

table#registerView td, table#registerView th {
  height: 24px;
  font-size: 14px;
  text-align: right;
}

table#memoryView {
  table-layout: fixed;
}

table#memoryView td, table#memoryView th {
  height: 24px;
  font-size: 14px;
  text-align: right;
  font-family: "Courier New";
  color: #fff;
}

table#memoryView>tbody.memoryButtonContainer>tr>td {
  padding: 0;
}

input[type="button"].memoryButton { /* TODO make these images or something */
  width: 100%;
  height: 100%;
  padding: 0;
  border: 1px outset #0c0;
  border-radius: 0px;
  background-color: #0c0;
}

input[type="button"].memoryButton:active {
  border-style: inset;
}

